# libvmdk

./: .gitignore  Makefile.am  build.ps1  configure.ac
vs2022/: Makefile.am  libvmdk.sln
vs2022/libbfio/: libbfio.vcxproj
vs2022/libcdata/: libcdata.vcxproj
vs2022/libcerror/: libcerror.vcxproj
vs2022/libcfile/: libcfile.vcxproj
vs2022/libclocale/: libclocale.vcxproj
vs2022/libcnotify/: libcnotify.vcxproj
vs2022/libcpath/: libcpath.vcxproj
vs2022/libcsplit/: libcsplit.vcxproj
vs2022/libcthreads/: libcthreads.vcxproj
vs2022/libfcache/: libfcache.vcxproj
vs2022/libfdata/: libfdata.vcxproj
vs2022/libfvalue/: libfvalue.vcxproj
vs2022/libuna/: libuna.vcxproj
vs2022/libvmdk/: libvmdk.vcproj  libvmdk.vcxproj
vs2022/pyvmdk/: pyvmdk.vcproj  pyvmdk.vcxproj
vs2022/vmdk_test_bit_stream/: vmdk_test_bit_stream.vcproj  vmdk_test_bit_stream.vcxproj
vs2022/vmdk_test_compression/: vmdk_test_compression.vcxproj
vs2022/vmdk_test_deflate/: vmdk_test_deflate.vcxproj
vs2022/vmdk_test_descriptor_file/: vmdk_test_descriptor_file.vcxproj
vs2022/vmdk_test_error/: vmdk_test_error.vcxproj
vs2022/vmdk_test_extent_descriptor/: vmdk_test_extent_descriptor.vcxproj
vs2022/vmdk_test_extent_file/: vmdk_test_extent_file.vcxproj
vs2022/vmdk_test_extent_table/: vmdk_test_extent_table.vcxproj
vs2022/vmdk_test_extent_values/: vmdk_test_extent_values.vcxproj
vs2022/vmdk_test_grain_data/: vmdk_test_grain_data.vcxproj
vs2022/vmdk_test_grain_group/: vmdk_test_grain_group.vcxproj
vs2022/vmdk_test_grain_table/: vmdk_test_grain_table.vcxproj
vs2022/vmdk_test_handle/: vmdk_test_handle.vcxproj
vs2022/vmdk_test_huffman_tree/: vmdk_test_huffman_tree.vcproj  vmdk_test_huffman_tree.vcxproj
vs2022/vmdk_test_io_handle/: vmdk_test_io_handle.vcxproj
vs2022/vmdk_test_notify/: vmdk_test_notify.vcxproj
vs2022/vmdk_test_support/: vmdk_test_support.vcxproj
(+8 files in other folders)
