MSVSCPP_FILES = \
	libbfio/libbfio.vcxproj \
	libcdata/libcdata.vcxproj \
	libcerror/libcerror.vcxproj \
	libcfile/libcfile.vcxproj \
	libclocale/libclocale.vcxproj \
	libcnotify/libcnotify.vcxproj \
	libcpath/libcpath.vcxproj \
	libcsplit/libcsplit.vcxproj \
	libcthreads/libcthreads.vcxproj \
	libfcache/libfcache.vcxproj \
	libfdata/libfdata.vcxproj \
	libfvalue/libfvalue.vcxproj \
	libuna/libuna.vcxproj \
	libvmdk/libvmdk.vcxproj \
	pyvmdk/pyvmdk.vcxproj \
	vmdk_test_bit_stream/vmdk_test_bit_stream.vcxproj \
	vmdk_test_compression/vmdk_test_compression.vcxproj \
	vmdk_test_deflate/vmdk_test_deflate.vcxproj \
	vmdk_test_descriptor_file/vmdk_test_descriptor_file.vcxproj \
	vmdk_test_error/vmdk_test_error.vcxproj \
	vmdk_test_extent_descriptor/vmdk_test_extent_descriptor.vcxproj \
	vmdk_test_extent_file/vmdk_test_extent_file.vcxproj \
	vmdk_test_extent_table/vmdk_test_extent_table.vcxproj \
	vmdk_test_extent_values/vmdk_test_extent_values.vcxproj \
	vmdk_test_grain_data/vmdk_test_grain_data.vcxproj \
	vmdk_test_grain_group/vmdk_test_grain_group.vcxproj \
	vmdk_test_grain_table/vmdk_test_grain_table.vcxproj \
	vmdk_test_handle/vmdk_test_handle.vcxproj \
	vmdk_test_huffman_tree/vmdk_test_huffman_tree.vcxproj \
	vmdk_test_io_handle/vmdk_test_io_handle.vcxproj \
	vmdk_test_notify/vmdk_test_notify.vcxproj \
	vmdk_test_support/vmdk_test_support.vcxproj \
	vmdk_test_system_string/vmdk_test_system_string.vcxproj \
	vmdk_test_tools_info_handle/vmdk_test_tools_info_handle.vcxproj \
	vmdk_test_tools_output/vmdk_test_tools_output.vcxproj \
	vmdk_test_tools_signal/vmdk_test_tools_signal.vcxproj \
	vmdkinfo/vmdkinfo.vcxproj \
	vmdkmount/vmdkmount.vcxproj \
	zlib/zlib.vcxproj \
	libvmdk.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

